# PCL-Pose

./: .gitignore  CMakeLists.txt  README.md  pose.cpp  pose.h  tests.cpp
CAD_files/: D455_baseplate_v_push.ipt  D455_baseplate_v_push.stl
PCL_Official_VFH_Demo/: training_data.h5  training_data.list
lab_data/mustard_small/: mustard_small_0001.pcd  mustard_small_0001_vfh.pcd  mustard_small_0002.pcd  mustard_small_0002_vfh.pcd  mustard_small_0003.pcd  mustard_small_0003_vfh.pcd  mustard_small_0004.pcd  mustard_small_0004_vfh.pcd  mustard_small_0007.pcd  mustard_small_0007_vfh.pcd  mustard_small_0008.pcd  mustard_small_0008_vfh.pcd  mustard_small_0009.pcd  mustard_small_0009_vfh.pcd  mustard_small_0010.pcd  mustard_small_0010_vfh.pcd  mustard_small_0011.pcd  mustard_small_0011_vfh.pcd  mustard_small_0012.pcd  mustard_small_0012_vfh.pcd  mustard_small_0013.pcd  mustard_small_0013_vfh.pcd  mustard_small_0014.pcd  mustard_small_0014_vfh.pcd
lab_data/spray_bottle_tall/: spray_bottle_tall_0001.pcd  spray_bottle_tall_0001_vfh.pcd  spray_bottle_tall_0002.pcd  spray_bottle_tall_0002_vfh.pcd  spray_bottle_tall_0004.pcd  spray_bottle_tall_0004_vfh.pcd  spray_bottle_tall_0005.pcd  spray_bottle_tall_0005_vfh.pcd  spray_bottle_tall_0006.pcd  spray_bottle_tall_0007.pcd  spray_bottle_tall_0008_vfh.pcd  spray_bottle_tall_0009.pcd  spray_bottle_tall_0009_vfh.pcd  spray_bottle_tall_0010.pcd  spray_bottle_tall_0010_vfh.pcd  spray_bottle_tall_0011.pcd  spray_bottle_tall_0011_vfh.pcd  spray_bottle_tall_0012.pcd  spray_bottle_tall_0012_vfh.pcd  spray_bottle_tall_0013.pcd  spray_bottle_tall_0013_vfh.pcd  spray_bottle_tall_0014.pcd  spray_bottle_tall_0014_vfh.pcd  spray_bottle_tall_0015.pcd  spray_bottle_tall_0015_vfh.pcd  spray_bottle_tall_0016.pcd  spray_bottle_tall_0016_vfh.pcd  spray_bottle_tall_0017.pcd  spray_bottle_tall_0017_vfh.pcd  spray_bottle_tall_0018.pcd  spray_bottle_tall_0018_vfh.pcd  spray_bottle_tall_0019.pcd  spray_bottle_tall_0019_vfh.pcd
lab_data/test/: spray_bottle_tall_0001.pcd  spray_bottle_tall_0001_vfh.pcd  spray_bottle_tall_0003.pcd  spray_bottle_tall_0003_vfh.pcd  spray_bottle_tall_0006_vfh.pcd  spray_bottle_tall_0007_vfh.pcd  spray_bottle_tall_0008.pcd
output/: capture.pcd  capture_vfh.pcd
src/: build_tree.cpp  cluster_extraction.cpp  cluster_extraction_prefilter.cpp  cluster_extraction_test.cpp  main.cpp  main_marker.cpp  manual_measure.cpp  marker_pose_estimation.h  marker_tests.cpp  pose_estimation.h  tests.cpp
